--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" />
 		<link rel="icon" type="image/x-icon" href="src\favicon.ico" />
+		<script src="/src/app/util/xmltojson.js"></script>
 	</head>
 	<body>
 		<app-root></app-root>
